--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Javascript Checkpoint</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body> 
 
@@ -37,6 +37,6 @@
     </p>
   </div>
 </body>
-<script src="js/mais.js">
+<script src="mais.js">
 </script>
 </html>
